cabal-version:      3.0

name:               csl-types
version:            0.1.0.0

author:             Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code

library
    import: lang
    exposed-modules:
      CSL
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      containers                             -any,
      data-default                           -any,
      deepseq                                -any,
      directory                              -any,
      extra                                  -any,
      file-embed                             -any,
      freer-simple                           -any,
      flat                                   -any,
      generic-arbitrary                      -any,
      ghc-prim                               -any,
      hex-text                               -any,
      lens                                   -any,
      memory                                 -any,
      mtl                                    -any,
      openapi3                               -any,
      optparse-applicative                   -any,
      plutus-tx-js                           -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      random                                 -any,
      text                                   -any
    hs-source-dirs: src
    
test-suite csl-types-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Main-Is:              Main.hs
  Build-Depends:
    base                          >= 4.9 && < 5,
    aeson                                  -any,
    bytestring                             -any,
    containers                             -any,
    csl-types                              -any,
    text                                   -any
