cabal-version:      3.0

name:               csl-types
version:            0.1.0.0

author:             Vladimir Sinyakov
maintainer:         team@encoins.io

flag frontend
    description:
        Builds executables for the frontend.
    default: False
    manual:  True

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code

library
    import: lang
    exposed-modules:
      CSL
    if !flag(frontend)
      exposed-modules:
        CSL.Class
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      cardano-api                            -any,
      containers                             -any,
      data-default                           -any,
      deepseq                                -any,
      directory                              -any,
      extra                                  -any,
      file-embed                             -any,
      freer-simple                           -any,
      flat                                   -any,
      generic-arbitrary                      -any,
      ghc-prim                               -any,
      hex-text                               -any,
      lens                                   -any,
      memory                                 -any,
      mtl                                    -any,
      openapi3                               -any,
      optparse-applicative                   -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      random                                 -any,
      text                                   -any
    if flag(frontend)
      build-depends:
        plutus-tx-js                         -any,
    else
      build-depends:
        plutus-apps-extra                    -any,
        plutus-ledger                        -any,
        plutus-ledger-api                    -any,
        plutus-script-utils                  -any,
        plutus-tx                            -any        
    hs-source-dirs: src
    
test-suite csl-types-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Main-Is:              Main.hs
  Build-Depends:
    base                          >= 4.9 && < 5,
    aeson                                  -any,
    bytestring                             -any,
    cardano-api                            -any,
    containers                             -any,
    csl-types                              -any,
    hspec                                  -any,
    plutus-pab                             -any,
    text                                   -any,
    QuickCheck                             -any
  if flag(frontend)
    build-depends:
      plutus-tx-js                         -any,
  else
    build-depends:
      plutus-apps-extra                    -any,
      plutus-ledger                        -any,
      plutus-ledger-api                    -any,
      plutus-tx                            -any      